<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AudioPlayerFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" ">

        <TextView
            android:id="@+id/filenameBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/filenamebarmagin"
            android:gravity="center"
            android:textSize="@dimen/filenametextsize" />
    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.chip.Chip
        android:id="@+id/speedChip"
        android:layout_width="@dimen/chipwidth"
        android:layout_height="@dimen/chipheight"
        android:layout_marginBottom="@dimen/chipmaginbottom"
        android:text="@string/chip"
        android:textAlignment="center"
        android:textSize="@dimen/chiptextsize"
        app:layout_constraintBottom_toTopOf="@+id/seekbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbottom30"
        android:progress="40"
        android:progressTint="@color/playerColor"
        android:thumb="@color/playerColor"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_goneMarginBottom="@dimen/marginbottom20" />

    <TextView
        android:id="@+id/progressTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/progressTime"
        android:textSize="@dimen/chiptextsize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <TextView
        android:id="@+id/progressTimeEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/marginend16"
        android:text="@string/ProgressTimeEnd"
        android:textSize="@dimen/chiptextsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginbottom40dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/playAudio"
            android:layout_width="@dimen/imagesquare66"
            android:layout_height="@dimen/imagesquare66"
            android:background="@drawable/playaudio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/backTo"
            android:layout_width="@dimen/chipwidth"
            android:layout_height="@dimen/chipwidth"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/replayback"
            app:layout_constraintEnd_toStartOf="@+id/playAudio"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/forwardTo"
            android:layout_width="@dimen/chipwidth"
            android:layout_height="@dimen/chipwidth"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/playAudio" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>