<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CardAudioFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@android:color/transparent">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height130dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:title="@string/saverecord"/>
            <RelativeLayout
                android:id="@+id/editBar"
                android:layout_width="match_parent"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/marginend16"
                android:paddingStart="@dimen/marginend16"
                android:padding="@dimen/padding8dp">
                <ImageButton
                    android:id="@+id/butClose"
                    android:layout_width="@dimen/marginbottom30"
                    android:background="@drawable/close"
                    android:layout_height="@dimen/marginbottom30"/>
<!--                <ImageButton-->
<!--                    android:id="@+id/butAll"-->
<!--                    android:background="@drawable/selectall"-->
<!--                    android:layout_width="@dimen/marginbottom30"-->
<!--                    android:layout_alignParentEnd="true"-->
<!--                    android:layout_height="@dimen/marginbottom30"/>-->

            </RelativeLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/recycler_item"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:behavior_hideable="true"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/padding16dp"
        android:elevation="@dimen/padding8dp"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginEnd="@dimen/marginEnd90dp">
            <ImageButton
                android:id="@+id/deletebut"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grayRipple"
                android:background="@drawable/delete"/>
            <TextView
                android:id="@+id/textdelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deletetext"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageButton
                android:id="@+id/editbut"
                android:clickable="false"
                android:textColor="@color/grayRipple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/edit"/>
            <TextView
                android:id="@+id/textedit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edittext"/>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>